--- a/index.html
+++ b/index.html
@@ -41,28 +41,21 @@
 
                 <ul class="navbar-list">
                     <li class="navbar-item">
-                        <a href="#home" class="navbar-link" data-nav-toggler>Home</a>
+                        <a href="#home" class="navbar-link" data-nav-toggler>Beranda</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#courses" class="navbar-link" data-nav-toggler>Pilihan Kelas</a>
+                    </li>
+
+                    <li class="navbar-item">
+                        <a href="#event" class="navbar-link" data-nav-toggler>Promo</a>
                     </li>
 
                     <li class="navbar-item">
                         <a href="#about" class="navbar-link" data-nav-toggler>About</a>
                     </li>
 
-                    <li class="navbar-item">
-                        <a href="#courses" class="navbar-link" data-nav-toggler>Courses</a>
-                    </li>
-
-                    <li class="navbar-item">
-                        <a href="#event" class="navbar-link" data-nav-toggler>Event</a>
-                    </li>
-
-                    <li class="navbar-item">
-                        <a href="#blog" class="navbar-link" data-nav-toggler>Blog</a>
-                    </li>
-
-                    <li class="navbar-item">
-                        <a href="#contact" class="navbar-link" data-nav-toggler>Contact</a>
-                    </li>
                 </ul>
             </nav>
             
